--- a/css/reviews.scss
+++ b/css/reviews.scss
@@ -1,22 +1,24 @@
+@import 'style.scss';
 .reviews{
     margin: 100px 0;
     position: relative;
 
 
 
-    &_item {
-        display: flex;
+    &-item {
+        @include flex;
+        max-width: 100%;
     }
 
-    &_right {
+    &-right {
         width: 50%;
-        height: 490px;
+   
         display: inline-flex;
         flex-direction: column;
         justify-content: center;
         background-color: #5C3249;
 
-        &_left img {
+        &-left img {
             width: 100%;
         }
 
@@ -24,9 +26,9 @@
         
 }
 
-&_left {
+&-left {
     width: 50%;
-    height: 490px;
+
 }
 &_inner{
     margin: auto;
@@ -55,14 +57,70 @@
         color: #fff;
         text-transform: uppercase;
         }
+
+
+        &-left img {
+            width: 100%;
+            height: 100%;
+        }
         
 }
 
 
 
 
+@media screen and (max-width: 320px) {
 
 
+    .reviews {
+
+        &-right{
+            width: 100%;
+            padding: 20px 0 10px 0px;
+            text-align: center;
+            
+        
+     
+        }
+
+        &_inner {
+            padding-bottom: 95px;
+            
+        }
 
 
+        &-left{
+            width: 100%;
+    
+     
+        }
 
+        &-left img {
+            max-width: 320px;
+    
+
+
+    }
+
+    &_title {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 32px;
+        padding: 40px;
+            }
+
+    &_subtitle {
+                font-weight: 700;
+        font-size: 12px;
+        line-height: 14px;
+        
+            }
+    
+    
+    
+
+    }
+
+    }
+    
+    
