--- a/css/works.scss
+++ b/css/works.scss
@@ -1,22 +1,29 @@
-.works{
-    display: flex;
-    flex-wrap: wrap;
-}
+
+@import 'style.scss';
 
 .works {
     margin: 0 auto;
+    @include flex;
+    justify-content: center;
+    
 
 
 
-    &_item {
+    &-item {
+    width: 100%;
     position: relative;
-    width: 25%;
+    max-width: 25%;
     border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
 
 
     &:hover .works_content {
-        opacity: .8;
+        opacity: 1;
+        background: rgba(255, 67, 67, 0.8);
+    }
+
+    &:active .works_content {
+        background: rgba(185, 12, 12, 0.8);
     }
     
     }
@@ -39,7 +46,6 @@
         position: absolute;
         top: 0;
         left: 0;
-        background: #FF4343;
         opacity: 0;
         text-align: center;
         transition: opacity .3s linear;
@@ -49,6 +55,31 @@
     &_content p {
         color: #fff;
     }
+    
+}
+
+/* Media */ 
+@media screen and (max-width: 320px) {
+
+    .works-item {
+        max-width: 50%;
+
+        .works_content .card-title  {
+            font-weight: 900;
+            font-size: 18px;
+            line-height: 21px;
+            margin-bottom: 5px;
+
+        }
+    }
+    .works_content .card-text  {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+
+
     
 }
 
